--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Installing Node
       uses: actions/setup-node@v2-beta
       with:
-        node-version: 12 
+        node-version: '12' 
 
     # Runs a set of commands using the runners shell
     - name: Installing Surge
       run: npm install --global surge
     - name: Deploying using surge
-      run: surge ./ asadbootcamp2020urdu4.surge.sh --token $ {{ secrets.TOKEN }}
+      run: surge ./ asadbootcamp2020urdu4.surge.sh --token ${{ secrets.TOKEN }}
